# HC-SR04

./: CMakeLists.txt  ReadMe.md
PCBA_rev4/: Readme.txt
PCBA_rev4/ATmega328P_Xplained_Mini_CAD_source_PCBA_rev4/: ATmega328P_Xplained_Mini.OutJob  ATmega328P_Xplained_Mini.PrjPCB  ATmega328P_Xplained_Mini.PrjPCBStructure
PCBA_rev4/Gerber/: ATmega328P_Xplained_Mini_release_rev4.GBL  ATmega328P_Xplained_Mini_release_rev4.GBO  ATmega328P_Xplained_Mini_release_rev4.GBS  ATmega328P_Xplained_Mini_release_rev4.GM1  ATmega328P_Xplained_Mini_release_rev4.GP1  ATmega328P_Xplained_Mini_release_rev4.GP2  ATmega328P_Xplained_Mini_release_rev4.GTL  ATmega328P_Xplained_Mini_release_rev4.GTO  ATmega328P_Xplained_Mini_release_rev4.GTP  ATmega328P_Xplained_Mini_release_rev4.GTS
PCBA_rev4/NC Drill/: ATmega328P_Xplained_Mini_RoundHoles_release_rev4.txt  ATmega328P_Xplained_Mini_release_rev4.drr
PCBA_rev4/Pick Place/: Pick Place for ATmega328P_Xplained_Mini_release_rev4.txt
PCBA_rev4/Test Points/: Assembly Testpoint Report for ATmega328P_Xplained_Mini_release_rev4.txt
include/: Pin.c  Pin.h
src/: HCSR04.c  HCSR04.h  main.c  main.h
